# Buckshot-Roulette

./: Buckshot Roulette Rules.txt  LICENSE  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/buckshotroulette/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/buckshotroulette/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/test/java/com/example/buckshotroulette/: ExampleUnitTest.kt
app/src/main/java/com/example/buckshotroulette/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
terminal/: .gitignore  Cargo.toml
terminal/src/: data.rs  main.rs  utils.rs
