[package]
name = "buckshot-roulette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clearscreen = "3.0.0"
lazy_static = "1.5.0"
rand = "0.8.5"
smart-read = "0.7.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
