[package]
name = "buckshot-roulette"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clearscreen = "4.0.6"
lazy_static = "1.5.0"
rand = "0.10.1"
smart-read = "0.9.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
